app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";

body{
  background-image: url('http://www.freeppt.net/background/green-swirl-backgrounds-for-powerpoint.jpg');
  background-size: cover;
}

.allPlaces{
  width: 945px;
  margin: 0 auto;
}

.center{
  text-align: center;
}

.eachPlace{
  background-color: rgba(128, 128, 128, 0.5);
  width:45%;
  height: 40em;
  border-style: solid;
  border-spacing: 2px,2px,2px,2px;
  float: left;
  padding: 8px;
  margin:12px;
}

.singlePlace{
  background-color: rgba(128, 128, 128, 0.5);
  position:absolute;
  top: 35%;
  left: 50%;
  width:30em;
  height:48em;
  margin-top: -9em; /*set to a negative number 1/2 of your height*/
  margin-left: -15em; /*set to a negative number 1/2 of your width*/
  border: 1px solid forestgreen;
}

.eachPlace img{
   width: 25em;
  height: 25em;
}

//.singlePlace img{
//  width: 25em;
//  height: 25em;
//}

.head{
  text-align: center;
}

